# weather-api

./: README.md  activities.py  app.py  pyproject.toml  run_worker.py  run_workflow.py  starter.py  workflows.py
fake_weather_service/: fake.py
static/: styles.css
sync_functions/: README.md  activities.py  run_worker.py  run_workflow.py  sync_activities.py  workflows.py
templates/: index.html  weather.html
tests/: test_activity.py  test_run_worker.py
