[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["rachfop <prachford@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.4.0"
flask = {version = "^2.2.3", extras = ["async"]}
requests = "^2.31.0"
aiohttp = "^3.8.6"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "ruff format ."}]
lint-types = "mypy --check-untyped-defs --namespace-packages ."
test = "pytest"
